# file-access-restful

./: AGENTS.md  README.md  pyproject.toml  run.sh
src/api/: main.py
src/services/: file_catalog.py
