[project]
name = "file-access-service"
version = "0.1.0"
description = "Simple FastAPI backend for browsing and downloading files."
requires-python = ">=3.12"
authors = [
    { name = "iLab Agents", email = "agents@example.com" }
]
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2,<9.0",
    "httpx>=0.27,<0.28",
    "ruff>=0.4,<0.5",
    "black>=24.4,<25.0",
]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-s"
